# codebase-index

./: .gitignore  README.md  helix.toml  ingestion.py  pyproject.toml  requirements.txt  test.ipynb  test.json  types.json
codebase_index/: Cargo.toml
codebase_index/src/: index-types.json  ingestion.rs  main.rs  queries.rs  updater.rs  utils.rs
codebase_index/src/sample/simple_code/: test.rs
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: Chat.tsx  LoadingBar.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/src/lib/: instructions.txt  types.ts
frontend/src/mcp/: server.py
helixdb-cfg/: config.hx.json  queries.hx  schema.hx
mcp-server/: server.py
mcp_example/: instructions.txt  main.py
mcp_server/: instructions.txt  server.py
python_test/: test.ipynb
sample/: lab00.py
sample/simple_code/: ingestion_copy.py
