[package]
name = "codebase_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
anyhow = "1.0"
tree-sitter = "0.25.6"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-zig = "1.1.2"
parking_lot = "0.12"
chonkier = "0.0.2"
chrono = "0.4"

[build-dependencies]
cc = "1.0"
